syntax = "proto3";
package sonrio.sonr.channel;

import "gogoproto/gogo.proto";
import "channel/params.proto";
import "channel/how_is.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/sonr-io/blockchain/x/channel/types";

// GenesisState defines the channel module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated HowIs howIsList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
