syntax = "proto3";
package sonrio.sonr.channel;
import "channel/v1/channel.proto";
option go_package = "github.com/sonr-io/sonr/x/channel/types";

message HowIs {
  // Did is the DID of the channel
  string did = 1;

  // Document is the DID Document of the registered name and account encoded as JSON
  string creator = 2;

  // ChannelDoc is the structure of the channel encoded as JSON
  ChannelDoc channel = 3;

  // Timestamp is the time of the last update of the DID Document
  int64 timestamp = 4;

  // Is Active is the status of the DID Document
  bool is_active = 5;
}

